5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1791_3141.log
== TEST (2019-05-29 14:56:06) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
e = s - 1
r = zeros(e, dtype=float)

while i < e:
	if n[i] == n[-2]:
		r[-1] = n[-2] ** (1/6)
		i = i + 1
	else:
		r[i] = n[i] ** (1/6)
		i = i + 1
t = sum(r)
m = (t/n[-1]) ** 6
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:58:50) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
e = s - 1
r = zeros(e, dtype=float)

while i < e:
	if n[i] == n[-2]:
		r[-1] = n[-2] ** (0.16)
		i = i + 1
	else:
		r[i] = n[i] ** (0.16)
		i = i + 1
t = sum(r)
m = (t/n[-1]) ** 6
print(m)
-- EXECUTION TIME:
0.46535
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
0.7423129844324518
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
0.5321998786746059
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
0.533616569500053
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:00:36) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
e = s - 1
r = zeros(e, dtype=float)

while i < e:
	if n[i] == n[-2]:
		r[-1] = n[-2] ** (0.16)
		i = i + 1
	else:
		r[i] = n[i] ** (0.16)
		i = i + 1
t = sum(r)
m = (t/n[-1]) ** 6
print(round(m, 2))
-- EXECUTION TIME:
0.358587
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
0.74
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
0.53
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
0.53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:01:53) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
e = s - 1
r = zeros(e, dtype=float)

while i < e:
	if n[i] == n[-2]:
		r[-1] = n[-2] ** (round(1/6, 2))
		i = i + 1
	else:
		r[i] = n[i] ** round(1/6, 2)
		i = i + 1
t = sum(r)
m = (t/n[-1]) ** 6
print(round(m, 2))
-- EXECUTION TIME:
0.396803
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
0.81
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
0.57
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:55) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
e = s - 1
r = zeros(e, dtype=float)

print(s)
print(e)
print(r)
while i < e:
	if n[i] == n[-2]:
		r[-1] = n[-2] ** (round(1/6, 2))
		print(r[-1])
		i = i + 1
	else:
		r[i] = n[i] ** round(1/6, 2)
		print(r[i])
		i = i + 1
t = sum(r)
m = (t/n[-1]) ** 6
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:06:00) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
e = s - 1
r = zeros(e, dtype=float)

print(s)
print(e)
print(r)
while i < e:
	if n[i] == n[-2]:
		r[-1] = n[-2] ** 1/6
		print(r[-1])
		i = i + 1
	else:
		r[i] = n[i] ** 1/6
		print(r[i])
		i = i + 1
t = sum(r)
m = (t/n[-1]) ** 6
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:04) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
e = s - 1
r = zeros(e, dtype=float)

print(s)
print(e)
print(r)
while i < e:
	if n[i] == n[-2]:
		r[-1] = n[-2] ** 1/6
		print(r[-1])
		i = i + 1
	else:
		r[i] = n[i] ** 1/6
		print(r[i])
		i = i + 1
t = sum(r)
print(t)
m = (t/n[-1]) ** 6
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:16:55) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = zeros(s, dtype=float)
while i < s:
	r[i] = n[i] ** 1/6
	print(r[i])
	i = i + 1
t = sum(r)
m = (t/s) ** 6
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:16:59) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = zeros(s, dtype=float)
while i < s:
	r[i] = n[i] ** 1/6
	print(r[i])
	i = i + 1
t = sum(r)
m = (t/s) ** 6
print(round(m, 2))
-- EXECUTION TIME:
0.353062
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
0.31666666666666665
0.48333333333333334
0.65
0.8166666666666668
0.9833333333333334
1.1500000000000001
1.3166666666666667
0.3
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
0.18333333333333335
0.3666666666666667
0.5499999999999999
0.7333333333333334
0.9166666666666666
1.0999999999999999
0.07
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
0.18333333333333335
0.35000000000000003
0.5166666666666667
0.6833333333333332
0.85
0.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:47) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	r = r + (n[i] ** 1/6)
	i = i + 1
m = (r/s) ** 6
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:18:48) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	r = r + (n[i] ** 1/6)
	i = i + 1
m = (r/s) ** 6
print(round(m, 2))
-- EXECUTION TIME:
0.376166
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
0.3
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
0.07
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
0.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:52) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	r = r + (n[i] ** 1/6)
	i = i + 1
m = (r/s) ** 6
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:23:03) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	if n[i] == n[-1]:
		r = r + (n[-2]) ** 1/6
		i = i + 1
	else:
		r = r + (n[i] ** 1/6)
		i = i + 1
m = (r/n[-1]) ** 6
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:23:09) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	if n[i] == n[-1]:
		r = r + (n[-2]) ** 1/6
		i = i + 1
	else:
		r = r + (n[i] ** 1/6)
		i = i + 1
m = (r/n[-1]) ** 6
print(round(m, 2))
-- EXECUTION TIME:
0.424442
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
0.12
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
0.03
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
0.01
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:23:11) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	if n[i] == n[-1]:
		r = r + (n[-2]) ** 1/6
		i = i + 1
	else:
		r = r + (n[i] ** 1/6)
		i = i + 1
m = (r/n[-1]) ** 6
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:26:37) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	r = r + (n[i] ** 1/6)
	i = i + 1
m = (r/) ** 1/6
print(round(m, 2))
-- EXECUTION TIME:
0.210958
-- ERROR:
  File "/home/codebench/codes/1791/3141/main.py", line 11
    m = (r/) ** 1/6
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:26:41) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	r = r + (n[i] ** 1/6)
	i = i + 1
m = (r/) ** 1/6
print(round(m, 2))
-- EXECUTION TIME:
0.140708
-- ERROR:
  File "/home/codebench/codes/1791/3141/main.py", line 11
    m = (r/) ** 1/6
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:29:44) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	r = r + ((n[i] ** 1/6)/v[-1])
	i = i + 1
m = r ** 6
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:29:46) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	r = r + ((n[i] ** 1/6)/v[-1])
	i = i + 1
m = r ** 6
print(round(m, 2))
-- EXECUTION TIME:
0.579689
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3141/main.py", line 9, in <module>
    r = r + ((n[i] ** 1/6)/v[-1])
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:30:40) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	r = r + ((n[i] ** 1/6)/s)
	i = i + 1
m = r ** 6
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:30:43) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	r = r + ((n[i] ** 1/6)/s)
	i = i + 1
m = r ** 6
print(round(m, 2))
-- EXECUTION TIME:
0.40404
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
0.3
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
0.07
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
0.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:30:52) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	r = r + ((n[i] ** 1/6)/v[0])
	i = i + 1
m = r ** 6
print(round(m, 2))
-- EXECUTION TIME:
0.505961
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/3141/main.py", line 9, in <module>
    r = r + ((n[i] ** 1/6)/v[0])
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:30:53) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	r = r + ((n[i] ** 1/6)/v[0])
	i = i + 1
m = r ** 6
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:33:24) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	r = r + (n[i] ** 1/6)
	i = i + 1
m = (r/s) ** 6
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:39:36) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	r = r + (n[i] ** (1/6))
	i = i + 1
m = (r/s) ** 6
print(round(m, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:40:04) 
-- CODE:
from numpy import*

n = array(eval(input("Vetores de entrada: ")))

i = 0
s = size(n)
r = 0
while i < s:
	r = r + (n[i] ** (1/6))
	i = i + 1
m = (r/s) ** 6
print(round(m, 2))
-- EXECUTION TIME:
0.457369
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.52
---- user output:
4.52
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.39
---- user output:
3.39
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.79
---- user output:
2.79
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
